--- a/css/random.css
+++ b/css/random.css
@@ -17,7 +17,7 @@ body {
     display: flex;
     flex-flow: wrap column;
     padding: 40px;
-    border: 2px solid #8290ff;
+    background-color: #8290ff;
     opacity: .7;
     border-radius: 6px;
     background: #fff;
